# FastCollide-GPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Report.md  Report_mid_2025.md  chatwithai 2.md  chatwithai.md
exe/: visualize.py
src/: collision_detection.cu  collision_detection.cuh  main.cu  physics.cu  physics.cuh
